--- a/TGL/TGL.WebApp/Pages/Index.cshtml
+++ b/TGL/TGL.WebApp/Pages/Index.cshtml
@@ -9,5 +9,7 @@
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
+GRACIAS POR ASISTIR AL CURSO DE .NET CORE
+
 <h1>@Model.Configuration["Nombre"]</h1>
 @Model.Configuration["Saludo"]
